# chess2

./: .README.md.swp  .gitignore  .gitignore.swp  .travis.yml  CMakeLists.txt  LICENSE  README.md
src/: board.cpp  board.hpp  definitions.hpp
test/: board.cpp  rank.hpp
